Fix scrolling bug chat overflow

--- a/app/assets/stylesheets/channel_chat.scss
+++ b/app/assets/stylesheets/channel_chat.scss
@@ -115,6 +115,7 @@
   width: 95%;
   height: auto;
   background-color: #36393f;
+  overflow: scroll;
 }
 
 #new-message {
